Modified a few elements to customise theme as per my preferences

--- a/assets/css/uno.css
+++ b/assets/css/uno.css
@@ -1044,7 +1044,7 @@ pre {
 .time,
 .author,
 .tags {
-  font-size: .8em;
+  font-size: 1.5em;
   color: #c7c7c7; }
   .date a,
   .time a,
@@ -1099,7 +1099,7 @@ pre {
 .content-wrapper {
   z-index: 800;
   width: 60%;
-  max-width: 800px;
+  max-width: 1100px;
   margin-left: 40%; }
 
 .content-wrapper__inner {
@@ -1142,6 +1142,10 @@ hr {
 .post-comments {
   border-top: 1px solid #dddddd;
   padding: 60px 0; }
+  
+.post-share {
+  border-top: 1px solid #dddddd;
+  padding: 10px 0; }
 
 .post-meta {
   margin: 0 0 .4em 0;
@@ -1170,7 +1174,8 @@ hr {
   border-radius: 3px;
   text-align: center; }
 .post pre {
-  width: 95%; }
+  width: 95%; 
+  overflow-x: auto;}
 .post hr {
   display: block;
   width: 30%;
@@ -1308,7 +1313,7 @@ hr {
 .cover-disabled {
   background: none; }
 
-.btn, .navigation__item a {
+.btn, .navigation__item a, .share__item a {
   padding: 10px 20px;
   border: 1px solid #e25440;
   border-radius: 20px;
@@ -1389,6 +1394,17 @@ nav {
       color: #FFF;
       border-color: #FFF;
       opacity: 1; }
+	  
+.share__item {
+  display: inline-block;
+  margin: 0 1px 0 0;
+  line-height: 1em; }
+  .share__item a {
+    display: block;
+    position: relative;
+    border-color: #e25440; }
+    .share__item a:hover {
+      border-color: ##e25440; }	  
 
 .navigation--social {
   margin-left: 1.5em; }
@@ -1399,6 +1415,16 @@ nav {
     .navigation--social a .icon {
       display: block;
       font-size: 1.7em; }
+	  
+.share--social {
+  margin-left: 0em; }
+  .share--social a {
+    padding: 6px 8px 6px 9px; }
+    .share--social a .label {
+      display: none; }
+    .share--social a .icon {
+      display: block;
+      font-size: 2.7em; }	  
 
 .pagination {
   display: block;
