--- a/partials/social.hbs
+++ b/partials/social.hbs
@@ -50,7 +50,7 @@ classes that you can use:
 
   <!-- Twitter -->
   <li class="navigation__item">
-    <a href="http://twitter.com/daleanthony" title="@DaleAnthony on Twitter">
+    <a href="http://twitter.com/suhas_chatekar" title="@suhas_chatekar on Twitter">
       <i class='icon icon-social-twitter'></i>
       <span class="label">Twitter</span>
     </a>
@@ -58,15 +58,15 @@ classes that you can use:
 
     <!-- Dribbble -->
     <li class="navigation__item">
-      <a href="http://dribbble.com/daleanthony" title="Dale-Anthony on Dribbble">
-        <i class='icon icon-social-dribbble'></i>
-        <span class="label">Dribbble</span>
+      <a href="https://www.linkedin.com/in/chatekar" title="Suhas Chatekar on LinkedIn">
+        <i class='icon icon-social-linkedin'></i>
+        <span class="label">LinkedIn</span>
       </a>
     </li>
 
     <!-- Email -->
     <li class="navigation__item">
-      <a href="mailto:hello@daleanthony.com" title="Email hello@daleanthony.com">
+      <a href="mailto:suhas.chatekar@gmail.com" title="Email suhas.chatekar@gmail.com">
         <i class='icon icon-mail'></i>
         <span class="label">Email</span>
       </a>
